# rust_planets

./: Cargo.toml
src/: main.rs
src/gui/: mod.rs
src/io/: mod.rs  model.rs  read_nm.rs  read_rst.rs  read_rst_test.rs  read_static.rs  read_static_test.rs  util.rs
src/model/: game.rs  game_test.rs
src/util/: mod.rs
test_files/pleiades10/: amaster.src  map.ini  mission.ini  pconfig.src  shiplist.txt
test_files/pleiades10/001/: player2.rst
