[package]
name = "rust_planets"
version = "0.1.0"
authors = ["Mikhail Girkin <mikegirkin@gmail.com>"]
edition = "2018"

[dependencies]
encoding_rs = "0.8.17"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.gdk]

[dependencies.cairo-rs]
version = "0.7.1"

